# guillotine-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-MIT  PUBLISHING.md  README.md  build.rs  build.zig  build.zig.zon
src/: lib.rs
src/guillotine_mini/: config.rs  database_bridge.rs  error.rs  evm.rs  ffi.rs  interpreter.rs  mod.rs  types.rs
tests/: config_test.rs  minimal_test.rs  revm_compat.rs  wrapper_test.rs
